--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.400.0",
     "node": "^22.4.0",
     "node-fetch": "^3.3.2",
+    "qrcode.react": "^3.1.0",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5"
   }
