--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "src/wayfare_frontend"
   ],
   "dependencies": {
-    "@dfinity/agent": "^1.4.0",
+    "@dfinity/agent": "^2.0.0",
+    "@dfinity/auth-client": "^2.0.0",
     "express": "^4.19.2",
+    "html-to-image": "^1.11.11",
+    "html5-qrcode": "^2.3.8",
     "ic-mops": "^0.44.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.400.0",
     "node": "^22.4.0",
     "node-fetch": "^3.3.2",
+    "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5"
   }
